name:                sftp-streams
version:             0.0.1
Cabal-Version:       >= 1.8
synopsis:            An SFTP implementation.
description:         An SFTP implementation.
category:            Network
license:             BSD3
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          thu@hypered.io
build-type:          Simple
homepage:            https://github.com/noteed/sftp-streams

source-repository head
  type: git
  location: git://github.com/noteed/sftp-streams.git

flag sftp-debug
  description: Add debug output that are visible client-side. TODO Confirm.
  default: False

executable sftp-mitm
  hs-source-dirs:      bin
  main-is:             sftp-mitm.hs
  build-depends:       attoparsec == 0.10.*,
                       base == 4.*,
                       base16-bytestring == 0.1.*,
                       bytestring == 0.9.*,
                       io-streams == 1.1.*,
                       process == 1.1.*,
                       text == 0.11.*,
                       transformers == 0.3.*
  ghc-options:         -Wall
