name:                sftp-streams
version:             0.0.3
Cabal-Version:       >= 1.8
synopsis:            An SFTP implementation.
description:         An SFTP implementation.
category:            Network
license:             BSD3
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          thu@hypered.io
build-type:          Simple
homepage:            https://github.com/noteed/sftp-streams

source-repository head
  type: git
  location: git://github.com/noteed/sftp-streams.git

flag sftp-debug
  description: Add debug output that are visible client-side. TODO Confirm.
  default: False

library
  build-depends:       attoparsec,
                       base == 4.*,
                       base16-bytestring,
                       bytestring,
                       io-streams,
                       text,
                       transformers
  exposed-modules:     Network.SFTP.Messages
  ghc-options:         -Wall

executable sftp-mitm
  hs-source-dirs:      bin
  main-is:             sftp-mitm.hs
  build-depends:       attoparsec,
                       base == 4.*,
                       base16-bytestring,
                       bytestring,
                       io-streams,
                       process,
                       sftp-streams,
                       text,
                       transformers
  ghc-options:         -Wall

executable sftp-mem
  hs-source-dirs:      bin
  main-is:             sftp-mem.hs
  build-depends:       attoparsec,
                       base == 4.*,
                       base16-bytestring,
                       bytestring,
                       cereal,
                       containers,
                       filepath,
                       io-streams,
                       process,
                       sftp-streams,
                       text,
                       transformers
  ghc-options:         -Wall
